# Soul-Engine

./: .appveyor.yml  .clang-format  .gitattributes  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CMakeSettings.json  CONTRIBUTING.md  Pipfile  README.md  Renew.py  Setup.py  Soul Engine.sln  conanfile.py
Examples/: CMakeLists.txt
Examples/Soul Info/Source/: SoulInfo.h
Examples/SoulInfo/: CMakeLists.txt
Examples/SoulInfo/Source/: CMakeLists.txt  SoulInfo.cpp
Source/: CMakeLists.txt
Source/Algorithm/Filters/: Filter.cpp
Source/Algorithm/Morton Code/: MortonCode.h
Source/Algorithms/Filters/: Filter.h
Source/Audio/: AudioManager.cpp  CMakeLists.txt
Source/Composition/: CMakeLists.txt
Source/Composition/Component/: Component.cpp  Component.h
Source/Composition/Entity/: DataRegistry.h  Entity.cpp  Entity.h  EntityManager.cpp  EntityManager.h  EntityModule.cpp  EntityModule.h  EntityRegistry.cpp  EntityRegistry.h  EntityTraits.cpp  EntityTraits.h
Source/Composition/Event/: Event.cpp  Event.h  EventManager.cpp  EventManager.h  EventModule.cpp  EventModule.h
Source/Composition/System/: System.h
Source/Compute/: AbstractComputeBackend.cpp  AbstractComputeBuffer.cpp  AbstractComputeBuffer.h  AbstractComputeDevice.cpp  CMakeLists.txt  ComputeBackend.h  ComputeBuffer.cpp  ComputeBuffer.h  ComputeDevice.cpp  ComputeDevice.h  ComputeManager.cpp  ComputeModule.h  DeviceAPI.h  DeviceBuffer.cpp  DeviceBuffer.h  DeviceRasterBuffer.cpp  DeviceRasterBuffer.h  GPUExecutePolicy.cpp  GPUExecutePolicy.h  GPUKernel.h  GPUTextureBase.h
Source/Compute/CUDA/: CUDABackend.cpp  CUDABackend.h  CUDADevice.cuh  CUDAKernel.h  CUDARasterBuffer.h  CUDATexture.h
Source/Compute/Modules/: CMakeLists.txt
Source/Compute/OpenCL/: OpenCLBackend.cpp  OpenCLDevice.h  OpenCLKernel.cpp
Source/Core/: CMakeLists.txt  Soul.cpp  Soul.h  SoulImplementation.cpp  SoulImplementation.h  SoulParameters.h
Source/Core/Camera/: Camera.cpp  Camera.h
Source/Core/Frame/: Frame.cpp  Frame.h  FrameManager.cpp  FrameManager.h  FramePipeline.cpp  FramePipeline.h
Source/Core/Geometry/: BoundingBox.h  Face.h  Tet.h  Vertex.h
Source/Core/Material/: Material.cpp  Material.h  ShaderNode.h
Source/Core/Object/: Object.cpp  Object.h
Source/Core/Scene/: Scene.cpp  Scene.h  Sky.cpp  Sky.h
Source/Core/Structure/: ExternalStructure.h  IntrusiveSparseSet.h  RingBuffer.h  Span.h  SparseArray.h  SparseBitMap.h  SparseHashMap.h  SparseHashSet.h  SparseStructure.h  SparseTable.h  SparseVector.h  Structure.h  StructureConcepts.h  View.h
Source/Core/Structures/: AbstractSparseSet.cpp  AbstractSparseSet.h  IntrusiveSparseSet.h  RingBuffer.cpp  RingBuffer.h  SparseSet.cpp  SparseSet.h
Source/Core/System/: Platform.h
Source/Core/Utility/: CRTP.h  System.h  Types.h
Source/Data/: DataRegistry.cpp  DataRegistry.h
Source/Data Structures/BitList/: BitList.cpp
Source/Data Structures/Geometric Primatives/: BoundingBox.cpp  BoundingBox.h  Tet.h  Vertex.h
Source/Display/: CMakeLists.txt  Display.cpp  Display.h  DisplayModule.cpp  DisplayModule.h  DisplayWindowAPI.cpp  DisplayWindowAPI.h  Window.cpp  Window.h  WindowManager.cpp  WindowManager.h
Source/Display/GUI/: CMakeLists.txt  GUIModule.cpp  GUIModule.h  Layout.h  Widget.h
Source/Display/Input/: Button.cpp  Button.h  CMakeLists.txt  InputModule.cpp  InputModule.h  InputSet.h
Source/Display/Layout/: Layout.cpp  Layout.h  SingleLayout.cpp  SingleLayout.h
Source/Display/Widget/: RenderWidget.cpp  RenderWidget.h  Widget.cpp  Widget.h
Source/Display/Window/: AbstractManager.cpp  AbstractManager.h  AbstractWindow.cpp  AbstractWindow.h  AbstractWindowManager.cpp  AbstractWindowManager.h  CMakeLists.txt  DisplayManager.cpp  DisplayManager.h  ManagerInterface.cpp  ManagerInterface.h  Monitor.h  SoulWindow.cpp  SoulWindow.h  Window.cpp  Window.h  WindowManager.cpp  WindowManager.h  WindowModule.cpp  WindowModule.h
Source/Display/Windowing/: Window.cpp
Source/Engine Core/: SoulCore.cpp
Source/Engine Core/Frame/: Frame.h  FrameManager.h
Source/Engine Core/Material/: Material.h
Source/Engine Core/Object/: MiniObject.h
Source/Engine Core/Scene/: Scene.cpp  Scene.h
Source/Event/: Event.h  EventManager.h
Source/GUI/: CMakeLists.txt  GUIModule.cpp  GUIModule.h  Layout.h
Source/Input/: InputManager.cpp  InputManager.h  InputSet.h
Source/Memory/: Allocator.cpp  Allocator.h  CMakeLists.txt  LinearAllocator.h
Source/Memory/TaggedAllocator/: TaggedAllocator.cpp  TaggedAllocator.h  TaggedHeap.cpp  TaggedHeap.h
Source/Multithreading/: Scheduler.cpp  Scheduler.h  SchedulerAlgorithm.cpp  SchedulerAlgorithm.h
Source/Network/: AbstractNetworkManager.cpp  AbstractNetworkManager.h  CMakeLists.txt  NetworkManager.cpp  NetworkManager.h
Source/Network/Client/: Client.cpp  Client.h
Source/Parallelism/: CMakeLists.txt  FiberProperties.cpp  FiberProperties.h  Scheduler.cpp  Scheduler.h  SchedulerAlgorithm.cpp  SchedulerAlgorithm.h  SchedulerModule.cpp  SchedulerModule.h  TaskParameters.cpp  TaskParameters.h
Source/Physics/: CMakeLists.txt  PhysicsEngine.h
Source/Physics Engine/: PhysicsEngine.cpp  PhysicsEngine.h
Source/Platform/: Platform.h
Source/Raster Engine/: Buffer.cpp  Buffer.h  RasterBackend.cpp  RasterBackend.h  RasterBase.cpp  RasterJob.h  RasterManager.cpp  RasterManager.h  Shader.cpp  Shader.h
Source/Rasterer/: CMakeLists.txt  RasterBackend.cpp  RasterBackend.h  RasterBackendAPI.cpp  RasterBackendAPI.h  RasterDevice.cpp  RasterDevice.h  RasterDeviceAPI.cpp  RasterDeviceAPI.h  RasterJob.cpp  RasterJob.h  RasterManager.cpp  RasterManager.h  RasterModule.cpp  RasterModule.h  Shader.cpp
Source/Ray Engine/: Ray.cpp  Ray.h  RayEngine.cpp  RayEngine.h  RayJob.h
Source/Shaders/: Shader.h
Source/System/: CMakeLists.txt  Compiler.h  Platform.h  System.cpp  System.h  cygwin.h  osx.h  windows64.h
Source/Tracer/: CMakeLists.txt  Ray.h  RayEngine.cpp  RayEngine.h  RayJob.cpp  RayJob.h
Source/Transput/: ArchiveBase.h  CMakeLists.txt  FileManager.cpp  FileManager.h  Settings.h
Source/Utility/: Logger.cpp  Logger.h  Timer.cpp  Timer.h
(+1253 files in other folders)
