
##############################################
#Compute

target_sources(${PROJECT_NAME}
    PRIVATE
        ComputeBackend.h
        ComputeBuffer.cpp
        ComputeBuffer.h
        ComputeDevice.h
        ComputeModule.cpp
        ComputeModule.h
        ComputePolicy.cpp
        ComputePolicy.h
        DeviceBuffer.cpp
        DeviceBuffer.h
)

add_subdirectory(Modules)